--- a/style.css
+++ b/style.css
@@ -14,6 +14,10 @@ h6 {
   font-family: "Segoe UI", Arial, sans-serif;
 }
 
+button {
+  font-family: Verdana, sans-serif;
+}
+
 html,
 body {
   height: 100%;
@@ -144,25 +148,48 @@ nav ul li a:hover {
   box-shadow: 0 3px 10px #222529, 3px 0 10px #222529;
 }
 
-.dropdown:hover .dropdownMenu {
+/* .dropdown:hover .dropdownMenu {
+  display: block;
+} */
+
+.show {
   display: block;
 }
 
-.dropdownShort div {
+.dropdownShort .dropbtns {
+  display: none;
   padding: 10px 0;
   text-align: center;
   background-color: #222a3a;
-  display: none;
   font-weight: bold;
+}
+
+nav button {
+  color: inherit;
+  text-align: center;
+  padding: 14px 16px;
+  background-color: inherit;
+  border: none;
+  font-size: 1rem;
+}
+
+nav button:hover {
+  color: inherit;
+  background-color: rgb(41, 41, 41);
 }
 
 /* -------------------------------------------------- */
 
-aside {
+.asides {
+  display: block;
   float: right;
   width: 30%;
+}
+
+aside {
   background-color: #222529;
   padding: 10px;
+  margin-bottom: 15px;
   border-radius: 0.5em;
 }
 
@@ -179,12 +206,27 @@ aside {
   margin: 0;
 }
 
-aside a {
+.sectie,
+aside {
+  box-shadow: 3px 3px 10px #222529;
+}
+
+aside a{
   display: block;
   background-color: #2b2e33;
   padding: 7px;
   padding-left: 15px;
   margin-top: 3px;
+  width: 100%;
+}
+
+aside .sectieNume {
+  display: inline-block;
+}
+
+aside span {
+  float: right;
+  font-size: 1.5rem;
 }
 
 /* ----------------------- */
@@ -274,7 +316,7 @@ footer p {
   font-size: 1.1rem;
 }
 
-.forms form input[type="submit"] {
+.forms form input[type="button"] {
   color: #222529;
   font-size: 1.1rem;
   border-radius: 5px;
@@ -282,7 +324,7 @@ footer p {
   width: 33%;
 }
 
-.forms form input[type="submit"]:hover {
+.forms form input[type="button"]:hover {
   opacity: 80%;
 }
 
@@ -305,7 +347,7 @@ footer p {
     display: none;
   }
 
-  menu aside {
+  menu .asides {
     display: none;
   }
 
@@ -349,7 +391,7 @@ footer p {
     margin: 3px;
   }
 
-  .dropdownShort div {
+  .dropdownShort .dropbtns {
     display: block;
   }
 
@@ -359,8 +401,16 @@ footer p {
     padding: 0;
   }
 
-  .dropdownShort:hover .dropdownMenuShort {
+  /* .dropdownShort:hover .dropdownMenuShort {
     display: block;
+  } */
+
+  .shows {
+    display: block;
+  }
+
+  nav button {
+    width: 100%;
   }
 }
 
@@ -407,3 +457,77 @@ footer p {
 }
 
 /* -------------------------------------------------- */
+
+.mySlides {
+  display: none;
+}
+
+.mySlides:first-child {
+  display: block;
+}
+
+img {
+  vertical-align: middle;
+}
+
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+
+.prev,
+.next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -22px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+.prev:hover,
+.next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active,
+.dot:hover {
+  background-color: #555555;
+}
+
+.fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@keyframes fade {
+  from {
+    opacity: 0.4;
+  }
+  to {
+    opacity: 1;
+  }
+}
